infra/k8s-dev/ingress-srv-uploads.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv-uploads
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "750m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: aiclipse.local
      http:
        paths:
          - path: /community/adminBFF/models/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: community-srv
                port:
                  number: 3000
