infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: aiclipse.local
      http:
        paths:
          - path: /community
            pathType: Prefix
            backend:
              service:
                name: community-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
    - host: storage.aiclipse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3-srv
                port:
                  number: 9000
